--- a/src/app/components/summary/components/summary-dialog-form/summary-dialog-form.component.scss
+++ b/src/app/components/summary/components/summary-dialog-form/summary-dialog-form.component.scss
@@ -19,3 +19,9 @@
     padding: 8px;
     gap: 8px;
 }
+.ckeditor-container{
+    display: flex;
+    width: 100%;
+    max-width:450px;
+    padding-bottom: 22px;
+}
