--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -2,4 +2,8 @@
     display: flex;
     flex-direction: column;
     height: calc(100% - 153px); // WHIT - toolbar
+
+    .container,.col,.row{
+        height: 100%;
+    }
 }
