--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,60 +1,23 @@
 <div class="container">
   <div class="row">     
     <div class="col">
-      <mat-accordion>
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>Job Title</mat-panel-title>
-          </mat-expansion-panel-header>        
-          <ng-container>
-            <section class="d-flex flex-column">
-              <mat-checkbox *ngFor="let job of jobTitle" (change)="selectJobTitle($event,job)">
-                {{job.value}}
-              </mat-checkbox>
-            </section>
-          </ng-container>
-        </mat-expansion-panel>
-        <mat-expansion-panel *ngFor="let skill of skillsCategoryGroupBySkill">
-            <mat-expansion-panel-header>
-              <mat-panel-title>{{skill.value}}</mat-panel-title>
-            </mat-expansion-panel-header>
-            <ng-container>
-              <mat-expansion-panel *ngFor="let category of skill.category">
-                <mat-expansion-panel-header>
-                  <mat-panel-title>
-                    {{category.value}}
-                  </mat-panel-title>
-                </mat-expansion-panel-header>
-                <section>
-                  <mat-checkbox *ngFor="let summary of getSummaryByCategory(category.key)" 
-                    (change)="selectSummary($event,summary)">
-                    {{sanitizeText(summary.summary)}}
-                  </mat-checkbox>
-                </section>
-              </mat-expansion-panel>
-            </ng-container>
-        </mat-expansion-panel>
-      </mat-accordion>
+      <app-generic-accordion
+        [jobTitles]="jobTitles" 
+        [skillsCategoryGroupBySkill]="skillsCategoryGroupBySkill" 
+        [summaries]="summaries"
+        (jobTitleChange)="selectJobTitle($event)"
+        (summaryChange)="selectSummary($event)"
+      ></app-generic-accordion>
     </div>
     <div class="col">
       <button (click)="export()">ToWORD</button>
-      <mat-accordion>
-        <mat-expansion-panel *ngFor="let skill of skillsCategoryGroupBySkill">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                {{skill.value}}
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-            <ng-container>
-              <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
-                <div *ngFor="let job of jobTitleSelected" class="example-box" cdkDrag>{{job.value}}</div>
-              </div>
-              <div role="main">
-                <ckeditor [config]="{ toolbar: [ 'bold' ]}" [editor]="ckeditor" [data]="dataCkeditor" (change)="onChange($event)"></ckeditor>
-              </div>
-            </ng-container>
-        </mat-expansion-panel>
-      </mat-accordion>
+      <app-generic-accordion
+        [isExperience]="true"
+        [dataCkeditor]="dataCkeditor"
+        [ckeditor]="ckeditor" 
+        [jobTitleSelected]="jobTitleSelected"        
+        (ckeditorChange)="onChange($event)"
+      ></app-generic-accordion>
     </div>
   </div>
 </div>
