--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,25 +1,1 @@
-<div class="container">
-  <div class="row">     
-    <div class="col">
-      <app-generic-accordion
-        [jobTitles]="jobTitles" 
-        [skillsCategoryGroupBySkill]="skillsCategoryGroupBySkill" 
-        [summaries]="summaries"
-        (jobTitleChange)="selectJobTitle($event)"
-        (summaryChange)="selectSummary($event)"
-      ></app-generic-accordion>
-    </div>
-    <div class="col">
-      <button (click)="export()">ToWORD</button>
-      <app-generic-accordion
-        [isExperience]="true"
-        [dataCkeditor]="dataCkeditor"
-        [ckeditor]="ckeditor" 
-        [jobTitleSelected]="jobTitleSelected"        
-        (ckeditorChange)="onChange($event)"
-      ></app-generic-accordion>
-    </div>
-  </div>
-</div>
-
-
+<p>Home Component</p>
