--- a/src/app/components/generic-accordion/accordion-panel-experience/accordion-panel-experience.component.html
+++ b/src/app/components/generic-accordion/accordion-panel-experience/accordion-panel-experience.component.html
@@ -1,13 +1,58 @@
-<mat-expansion-panel>
+<mat-expansion-panel
+  *ngIf="experienceForm"
+  [expanded]="show" 
+  (opened)="panelState(true)"
+  (closed)="panelState(false)"
+>
     <mat-expansion-panel-header>
-      <mat-panel-title>Experience</mat-panel-title>
+      <mat-panel-title *ngIf="!show">{{getJobTitle}}</mat-panel-title>
+      <mat-panel-description *ngIf="!show">{{getEmployerTitle}}</mat-panel-description>
     </mat-expansion-panel-header>
+    
     <ng-container>
-      <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
-        <div *ngFor="let job of jobTitleSelected" class="example-box" cdkDrag>{{job.value}}</div>
-      </div>
-      <div role="main">
-        <ckeditor [config]="{ toolbar: [ 'bold' ]}" [editor]="ckeditor" [data]="dataCkeditor" (change)="onChange($event)"></ckeditor>
+
+      <div>
+        <form [formGroup]="experienceForm" style="font-size: 18px">
+          <div class="form-sigle-container">
+            <mat-form-field>
+              <mat-label>Job Title</mat-label>
+              <input matInput formControlName="jobTitle" placeholder="JobTitle" (keyup)="onFormChange()">
+            </mat-form-field>
+          </div>
+          <div class="form-sigle-container">
+            <mat-form-field>
+              <mat-label>Employer</mat-label>
+              <input matInput formControlName="employer" placeholder="Employer" (keyup)="onFormChange()">
+            </mat-form-field>
+          </div>
+          <div class="form-sigle-container">
+            <mat-form-field>
+              <mat-label>Country</mat-label>
+              <input matInput formControlName="country" placeholder="Country" (keyup)="onFormChange()">
+            </mat-form-field>
+          </div>
+          <div class="form-multiple-container">
+            <mat-form-field>
+              <mat-label>Start date</mat-label>
+              <input matInput formControlName="startDate" [matDatepicker]="startPicker" (dateChange)="onFormChange()" readonly>
+              <mat-datepicker-toggle matIconSuffix [for]="startPicker"></mat-datepicker-toggle>
+              <mat-datepicker #startPicker></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>End date</mat-label>
+              <input matInput formControlName="endDate" [matDatepicker]="endPicker" (dateChange)="onFormChange()" readonly>
+              <mat-datepicker-toggle matIconSuffix [for]="endPicker"></mat-datepicker-toggle>
+              <mat-datepicker #endPicker></mat-datepicker>
+            </mat-form-field>
+            <section>
+              <mat-checkbox formControlName="present" (change)="onPresentChange($event)">Present</mat-checkbox>
+            </section>
+          </div>
+          
+          <div role="main">
+            <ckeditor [editor]="ckeditor" [config]="{ toolbar: [ 'bold' ]}" formControlName="editor" (change)="onFormChange()"></ckeditor>
+          </div>
+        </form>
       </div>
     </ng-container>
 </mat-expansion-panel>
