--- a/src/app/components/generic-accordion/accordion-panel-job/accordion-panel-job.component.html
+++ b/src/app/components/generic-accordion/accordion-panel-job/accordion-panel-job.component.html
@@ -4,7 +4,11 @@
     </mat-expansion-panel-header>        
     <ng-container>
       <section class="d-flex flex-column">
-        <mat-checkbox *ngFor="let job of jobTitles" (change)="selectJobTitle($event,job)">
+        <mat-checkbox 
+          *ngFor="let job of jobTitles" 
+          [checked]="validateChecked(job)" 
+          (change)="selectJobTitle($event,job)"
+        >
           {{job.value}}
         </mat-checkbox>
       </section>
