--- a/src/app/components/generic-accordion/generic-accordion.component.html
+++ b/src/app/components/generic-accordion/generic-accordion.component.html
@@ -1,22 +1,19 @@
 <mat-accordion>
     <div [ngSwitch]="isExperience">
         <section *ngSwitchCase="false">
-            <app-accordion-panel-job 
-                [jobTitles]="jobTitles" 
-                (jobTitleChange)="onJobTitleChange($event)"
-            ></app-accordion-panel-job>
-            <app-accordion-panel-skill 
-                [skillsCategoryGroupBySkill]="skillsCategoryGroupBySkill" 
-                [summaries]="summaries" 
-                (summaryChange)="onSummaryChange($event)"
-            ></app-accordion-panel-skill>    
+            <section *ngIf="show">
+                <app-accordion-panel-skill 
+                    [summarySelected]="summarySelected"
+                    [skillsCategoryGroupBySkill]="skillsCategoryGroupBySkill" 
+                    [summaries]="summaries" 
+                    (summaryChange)="onSummaryChange($event)"
+                ></app-accordion-panel-skill>
+            </section>    
         </section>
         <section *ngSwitchCase="true">
             <app-accordion-panel-experience 
-                [ckeditor]="ckeditor"
-                [dataCkeditor]="dataCkeditor"
-                [jobTitleSelected]=jobTitleSelected 
-                (ckeditorChange)="onCkeditorChange($event)"
+                [experienceForm]="experienceForm"
+                (formChange)="onFormChange()"
             ></app-accordion-panel-experience>
         </section>
     </div>
