--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -1,10 +1,23 @@
 
 <div class="container-summary">
     <div class="buttons-container">
+        <form [formGroup]="summaryForm" style="font-size: 18px">
+            <div class="form-sigle-container">
+              <mat-form-field class="form-search">
+                <mat-label>Search</mat-label>
+                <input matInput formControlName="search" placeholder="Search" (focusout)="onSearch()">
+              </mat-form-field>
+              <mat-form-field>
+                <mat-label>Appears</mat-label>
+                <input matInput type="number" min="1" formControlName="appears" placeholder="Appears" (focusout)="onSearch()">
+              </mat-form-field>
+            </div>
+        </form>
         <button mat-flat-button color="primary" (click)="newSummary()">Registrar</button>
     </div>
     <div class="container-table">
         <app-generic-table 
+        style="width: 100%;"
         [tableDataSource]="summaries"
         [displayedColumns]="displayedColumns"
         [matSortColumn]="matSortColumn"
