--- a/src/app/components/cv/cv.component.scss
+++ b/src/app/components/cv/cv.component.scss
@@ -1,15 +1,30 @@
-.container-accordion-content{
+.container-view{
     display: flex;
-    flex-direction: column;
-    height: calc(100% - 10px);
-    max-height: 500px;
+    height: calc(100% - 65px);
     overflow: auto;
-}
-:host ::ng-deep .mat-expansion-panel-body{
-    height:100%;
 }
 
-:host ::ng-deep .mat-expansion-panel-content{
-    max-height: 600px;
+.container-experiences{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 100%;
+    padding: 0 8px;
     overflow: auto;
+    height: calc(100% - 75px);
+    .mat-mdc-card {
+        width: 100%;
+    }
+}
+
+.container-buttons{
+    display: flex;
+    justify-content: center;
+    gap:16px;
+    padding: 16px 0;
+    width: 100%;
+}
+
+.mat-mdc-card-content{
+    cursor: pointer;
 }
