--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -32,12 +32,24 @@ $my-theme-dark: mat.define-dark-theme((
     .shadow-card{
       box-shadow: 0px 2px 4px -1px rgba(255,255,255,.2), 0px 4px 5px 0px rgba(255,255,255,.14), 0px 1px 10px 0px rgba(255,255,255,.12);
     }
+    .invert-color{
+      .mat-mdc-card-content{
+        color: white !important;        
+        background-color: rgba(255,255,255,.2) !important;
+      }      
+    }
 }
 
 .theme-light{
     @include mat.all-component-colors($my-theme-light);
     .shadow-card{
       box-shadow: 0px 2px 4px -1px rgba(0,0,0,.2), 0px 4px 5px 0px rgba(0,0,0,.14), 0px 1px 10px 0px rgba(0,0,0,.12);
+    }
+    .invert-color{
+      .mat-mdc-card-content{
+        color: white !important;        
+        background-color: rgba(0,0,0,.2) !important;
+      }      
     }
 }
 
@@ -54,4 +66,8 @@ input{
 
 .mat-select-panel:not([class*=mat-elevation-z]) {
   box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+}
+
+.mat-mdc-form-field-subscript-wrapper{
+  display: none;
 }
